KERML_-18 Updated cross feature type featuring transformation.